# fast-authentication

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
examples/: jwt.py
fast_authentication/: __init__.py  base.py  exception_handlers.py  header.py  jwt.py
tests/: test_jwt_bearer.py
